# ARGs-Analysis

./: .gitignore  README.md  dvc.yaml  explore-data.ipynb  index.md  params.yaml  params.yml  pyproject.toml  requirements.txt  train_flow.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
DeepARG/: outputs_exploring.ipynb
DeepARG/input_data/: GCF_000746645.1_ASM74664v1_protein.fa
data/: .gitignore  GCF_000746645.1_ASM74664v1_protein.fa.dvc  card-data.tar.bz2.dvc
